--- a/task/index.html
+++ b/task/index.html
@@ -59,5 +59,7 @@
 		<script type="application/javascript" src="js/script.js"></script>
 
 	</body>
-
+	<footer>
+    <p>Made by <a href="https://github.com/lucasvalenca1">Lucas Valenca</a></p>
+</footer>
 </html>
