--- a/itcareerslab-main (2)/itcareerslab-main (01)/itcareerslab-main (6)/itcareerslab-main/leaflet-interactive-map/index.html
+++ b/itcareerslab-main (2)/itcareerslab-main (01)/itcareerslab-main (6)/itcareerslab-main/leaflet-interactive-map/index.html
@@ -139,6 +139,18 @@
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/Leaflet.EasyButton/2.4.0/easy-button.min.js'></script>
 		<script src="dist/leaflet.awesome-markers.js"></script>	
 		<script type="application/javascript" src="js/script.js" id="rendered-js"></script>
+		<!-- Leaflet CSS -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+
+<!-- Leaflet.markercluster CSS -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
+
+<!-- Leaflet JavaScript -->
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+
+<!-- Leaflet.markercluster JavaScript -->
+<script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
 
 	</body>
 
